<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menu_expense_report">

    <fragment
        android:id="@+id/menu_expense_report"
        android:name="com.example.notedefrais.view.ndf.NdfFragment"
        android:label="@string/NDF"
        tools:layout="@layout/fragment_ndf" />

    <fragment
        android:id="@+id/menu_approval"
        android:name="com.example.notedefrais.view.approval.ApprovalFragment"
        android:label="@string/APPROBATION"
        tools:layout="@layout/fragment_approval" />

    <fragment
        android:id="@+id/menu_contact"
        android:name="com.example.notedefrais.view.about.contact.ContactFragment"
        android:label="@string/CONTACT"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/menu_about"
        android:name="com.example.notedefrais.view.about.about.AboutFragment"
        android:label="@string/A_PROPOS"
        tools:layout="@layout/fragment_about" />
</navigation>