<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.identification.LoginActivity"
    android:background="@color/prismaColorWhite">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="216dp"
        android:layout_height="112dp"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_10"
        app:layout_constraintBottom_toTopOf="@+id/etLoginText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoprismasoft" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/etLogin"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:inputType="text"
            android:textSize="16sp"
            android:hint="@string/LOGIN_LBL"
            android:ems="10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etPasswordText" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordText"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_15"
        app:layout_constraintTop_toBottomOf="@+id/etLoginText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/etPassword"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:hint="@string/PASSWORD_LBL"
            android:ems="10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnLog" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/AppTheme.Button.ValidateBig"
        android:id="@+id/btnLog"
        android:layout_width="0dp"
        android:text="@string/LOGIN_BTN"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordText" />

</androidx.constraintlayout.widget.ConstraintLayout>